--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 	<div id="container">
-		<div class="" style="--dir: -1"></div>
+		<div class="black-screen" style="--dir: -1"></div>
 		<h1>Mario Typing</h1>
 		<div class="btn-group">
 			<div class="btn start hover"><p>START</p></div>
 			<div class="btn high-score hover"><p>HIGH SCORE</p></div>
 			<div class="btn about hover"><p>ABOUT</p></div>
 		</div>
-		<!-- <div class="black-screen" style="--dir: 1"></div> -->
+		<div class="black-screen" style="--dir: 1"></div>
 	</div>
 
 	
